Finish matrix multiplication

--- a/programme/Makefile
+++ b/programme/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-O2 -c -Wall -fopenmp
+CFLAGS=-O2 -Wall -fopenmp
 SOURCES=matrix_multiplication_openmp.c util.c
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLES=matrix_multiplication_openmp
@@ -7,10 +7,10 @@ EXECUTABLES=matrix_multiplication_openmp
 all: $(EXECUTABLES)
 
 matrix_multiplication_openmp: $(OBJECTS)
-	$(CC) matrix_multiplication_openmp.o util.o -o $@
+	$(CC) $(CFLAGS) matrix_multiplication_openmp.o util.o -o $@
 
 .c.o:
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(EXECUTABLES) $(OBJECTS) 
