Add sequential solution for dijkstra

--- a/programme/Makefile
+++ b/programme/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-O2 -Wall -fopenmp
-SOURCES=matrix_multiplication_openmp.c sieve_of_erastosthenes_openmp.c util.c
+SOURCES=matrix_multiplication_openmp.c sieve_of_erastosthenes_openmp.c dijkstra_openmp.c util.c
 OBJECTS=$(SOURCES:.c=.o)
-EXECUTABLES=matrix_multiplication_openmp sieve_of_erastosthenes_openmp
+EXECUTABLES=matrix_multiplication_openmp sieve_of_erastosthenes_openmp dijkstra_openmp
 
 all: $(EXECUTABLES)
 
@@ -11,6 +11,9 @@ matrix_multiplication_openmp: $(OBJECTS)
 
 sieve_of_erastosthenes_openmp: $(OBJECTS)
 	$(CC) $(CFLAGS) sieve_of_erastosthenes_openmp.o util.o -o $@ -lm
+
+dijkstra_openmp: $(OBJECTS)
+	$(CC) $(CFLAGS) dijkstra_openmp.o util.o -o $@
 
 .c.o:
 	$(CC) $(CFLAGS) -c $< -o $@
